# mosaic

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt  README.md  calibration.xml  main.cpp
core/include/: blend.hpp  frame.hpp  mosaic.hpp  options.h  stitch.hpp  submosaic.hpp  utils.h
core/results/: .directory
core/src/: blend.cpp  frame.cpp  mosaic.cpp  stitch.cpp  submosaic.cpp  utils.cpp
docs/: Doxyfile
include/: args.hxx  frame.hpp  mosaic.hpp  options.h  stitch.hpp  submosaic.hpp
modules/common/: utils.cpp  utils.h
modules/fcomp/: CMakeLists.txt  README.md
modules/fcomp/include/: detector.h  options.h
modules/fcomp/src/: detector.cpp  main.cpp  preprocessing.cpp
modules/stitch/: CMakeLists.txt  README.md  main.cpp
modules/stitch/include/: blend.hpp  detector.h  mosaic.hpp  options.h  preprocessing.h  stitch.h  stitch.hpp
modules/stitch/src/: detector.cpp  main.cpp  mosaic.cpp  stitch.cpp
src/: blend.cpp  frame.cpp  main.cpp  mosaic.cpp  stitch.cpp  submosaic.cpp  utils.cpp
